Updated from Publii

--- a/games/puppet-killer/unblocked.html
+++ b/games/puppet-killer/unblocked.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Puppet Killer Unblocked - Lich Games</title>
+    <title>Puppet Killer Unblocked - FreezeNova</title>
 	
 	<meta property="og:title" content="Puppet Killer" />
 	<meta property="og:image" content="512.jpg" />
@@ -19,7 +19,6 @@
 	
     <script src="TemplateData/UnityProgress.js"></script>  
     <script src="Build/UnityLoader.js"></script>
-	<script src="https://unblocked-games.s3.amazonaws.com/games/unblocked.js"></script>
 	
 	<style>
 	 #links2{position:absolute;right:0;bottom:0;padding:8px;list-style:none;background-color:#fff;border-top-left-radius:5px}#links2 ul{list-style-type:none;margin:0;padding:0}#links2 ul li{display:inline}#links2 ul li a{color:#000;display:inline-block;margin-right:10px;text-decoration:none}#links2 ul li a.visited{color:#000}#links2 ul li a:hover{opacity:.85}
@@ -160,7 +159,7 @@
 		window.gameInstance.SendMessage('GameDistribution', 'ResumeGame');
 	}
 	
-	if (!unblockedRedirect())
+	//if (!unblockedRedirect())
 	{
 		InitApi(0);
 	
