Updated from Publii

--- a/games/puppet-killer/unblocked.html
+++ b/games/puppet-killer/unblocked.html
@@ -191,7 +191,7 @@
 	
 	function OnLoadX()
     {
-        unblockedOnLoadX(document);
+        //unblockedOnLoadX(document);
         
         FitScreen();
     }
